--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-ga": "^2.3.5",
     "react-scripts": "1.0.17"
   },
-  "homepage": "https://JoshuaTapp.github.io/portfolio",
+  "homepage": "https://joshuatapp.me",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
